Tested DQN on numerical projects env. Tested stable baselines on numerical projects env.

--- a/notebooks/experiments/various/stable_baselines3_discrete_proj_env.ipynb
+++ b/notebooks/experiments/various/stable_baselines3_discrete_proj_env.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "4f340565-6f53-4075-b7bb-f53f4e45c7cb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Intro"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "ae09bf37-fd06-4604-b569-a2db64e7e027",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Libraries"
    ]
@@ -20,7 +28,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d97c4d25-f44c-4386-b7f0-4ac5399bdde6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys"
@@ -30,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f5a3e9d9-bdc0-4304-865a-83c3797f4478",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sys.path.append(\"../../\")"
@@ -40,7 +56,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "2e8b8f20-430f-4ae5-be7e-8a973d82fbbb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from typing import Tuple\n",
@@ -62,7 +82,11 @@
   {
    "cell_type": "markdown",
    "id": "cf25aa71-1404-4125-9963-01b5fa48ab06",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Env setup"
    ]
@@ -71,7 +95,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cc81e93e-dc34-4ffd-ad92-a33931b2df02",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_SIZE = 300"
@@ -81,13 +109,17 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "7a183734-e67e-4f8e-9eef-7c54a7077596",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fwojcik\\Anaconda3\\envs\\py39\\lib\\site-packages\\gym\\logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "C:\\Users\\fwojcik\\Anaconda3\\envs\\py39\\lib\\site-packages\\gym\\logger.py:34: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
       "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
      ]
     }
@@ -112,7 +144,11 @@
   {
    "cell_type": "markdown",
    "id": "6274d998-44be-404c-b71c-22525802a993",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Agents"
    ]
@@ -121,7 +157,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "48c7620e-3c81-468b-bfc3-20c36012d41d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class BaselinesWrapper:\n",
@@ -137,7 +177,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "8c8e4f90-76dc-4260-b803-693ed1577290",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -164,7 +208,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "41d08a0a-20cb-4a13-a20a-e178481ee711",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -207,7 +255,11 @@
   {
    "cell_type": "markdown",
    "id": "59fbaab3-bbe3-46d0-ae43-a062d67dd63a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Evaluate before training"
    ]
@@ -216,7 +268,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "d150a416-a1da-4b1c-bbe0-f2d61df41d6d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -271,7 +327,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "37717f6d-76c8-41b2-8bdb-125f17f89e6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -307,7 +367,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "84bea87e-aff8-45c1-b14f-a6d88a094c32",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -335,7 +399,11 @@
   {
    "cell_type": "markdown",
    "id": "24bdc7d8-fec9-4505-b38c-f1eca009851f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Train agent"
    ]
@@ -349,7 +417,10 @@
     "jupyter": {
      "outputs_hidden": true
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -2429,7 +2500,10 @@
     "jupyter": {
      "outputs_hidden": true
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -9256,7 +9330,11 @@
   {
    "cell_type": "markdown",
    "id": "3dffa7dc-8b0e-406e-97d7-55ec2f411378",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Eval after train"
    ]
@@ -9265,7 +9343,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "532be158-73b3-4bc7-8a6e-c3f366253c98",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9291,7 +9373,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "ca6e7799-6c83-4962-aa1b-30b0c8fcc1dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9316,7 +9402,11 @@
   {
    "cell_type": "markdown",
    "id": "12b50b08-74cf-4ed7-8ff5-549ecf05c9da",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Compare results"
    ]
@@ -9325,7 +9415,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "4f3f9121-5538-4df4-b766-e4d848f84174",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9361,7 +9455,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "b6a7ecb6-9093-4917-a392-15f0410d59b0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9471,7 +9569,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "d7b62a5a-427b-4a37-8dfc-76ef19b87d35",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9493,7 +9595,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "9ada66b3-90e9-49ac-b4ee-ca93a1aeb63b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9558,7 +9664,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "919beef0-6467-4784-b95f-67d47bca826b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9662,7 +9772,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6d0f6a19-b2a1-4337-9461-1aaed0e2edfc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -9670,7 +9784,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2bc0a14-0c1c-49f9-a26b-08e8fe0de5f1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
